Changes in Version 1.1.1-11
	o non-finite weights are now set to zero and omitted

Changes in Version 1.1.1-10
	o Fixed a bug where bidirectional edges where plotted twice
  o 'curveAll' argument added.

Changes in Version 1.1.1-9
	o Added 'label.prop' argument to control the relative width of labels to the width of nodes
	o Improved the scaling algorithm of the labels. Labels now scale properly to 75% of the width of a node.
	o Labels are no longer coerced to characters, this means that expressions can now also be used for labels
	o Added 'label.cex' argument to scale the node labels

Changes in Version 1.1.1-8
	o Fixed a bug where edhe labels caused an error if all edge weights are zero

Changes in Version 1.1.1-7
	o larger nodes are now plotted on top of larger nodes.
	o Borders are now plotted at the same level als node colors. This means borders will no longer overlap overlapping nodes. Labels will still overlap overlapping nodes to increase readability
	o Added 'border.width' argument to control the border width.

Changes in Version 1.1.1-6
	o 'color' can now be assigned 'background', which will transfer the background color to the node. This is now the default
	o Edge ends are now replaced if the node is partly transparant, which is no longer based on vTrans

Changes in Version 1.1.1-5
	o 'label.color' and 'border.color' now default to 'white' if the mean color (rgb) is higher than 0.5
	o Added 'unCol' argument to control the default color for unweighted edges.

Changes in Version 1.1.1-4
	o 'color' now defaults to the background color, which defaults to 'white'
	o Fixed a bug where bidirectional edges were not stored properly

Changes in Version 1.1.1-2
	o More support for different edge colors added. Through the new 'addTrans' function, transparancy is automatically added to the edge color comparable with the edge strength
 o Argument lists can now be nested. Lower level arguments take precedence over higher nested arguments.