@@ -1,5 +1,7 @@
 Changes in Version 1.1.1-11
 	o non-finite weights are now set to zero and omitted
+  o the midpoint of curved edges is now set using the inner function PerpMid. This function now consistintly finds a midpoint perpandicular to the edge regardless of shape of the plot in inches.
+  o The 'curve' argument now scales the distance between the midpoint of an edge and the midpoint of the curved edge proportional 2.5% of the diagonal size of the plot in inche
 
 Changes in Version 1.1.1-10
 	o Fixed a bug where bidirectional edges where plotted twice
